# auden

./: Cargo.toml  README.md  build.rs
examples/: simple.rs  simple_library.rs
proto/: auden_grpc.proto  yars_grpc.proto
src/: bin.rs  db.rs  embedding.rs  embedding_queue.rs  languages.rs  lib.rs  main.rs  parsing.rs  semantic_index.rs  surreal_db.rs
src/embedding/: base.rs  mod.rs
src/parsers/: mod.rs  registry.rs  rust.rs  strategy.rs
