[package]
name = "yars"
version = "0.1.0"
edition = "2021"

[lib]
name = "yars"
path = "src/lib.rs"

[[bin]]
name = "yars"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
walkdir = "2"
tokio = { version = "1.34.0", features = ["full"] }
futures = "0.3"
anyhow = "*"
# The published version of pg-embed is broken and the latest version cant be published to crates.io
# https://github.com/faokunega/pg-embed/issues/28
pg-embed = { git = "https://github.com/faokunega/pg-embed.git" }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ]}
simple_logger = "*"
log = { version = "^0.4.17", features = ["std"] }
pgvector = { version = "0.3", features = ["sqlx"] }
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.3"
pretty_assertions = "*"
tonic = "0.10"
prost = "0.12"
sha2 = "*"

[build-dependencies]
tonic-build = "0.10"
