[package]
name = "auden"
version = "0.1.0"
edition = "2021"

[lib]
name = "auden"
path = "src/lib.rs"

[[bin]]
name = "auden"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = "0.1.74"
walkdir = "2"
tokio = { version = "1.34.0", features = ["full"] }
futures = "0.3"
anyhow = "*"
simple_logger = "*"
log = { version = "^0.4.17", features = ["std"] }
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.3"
pretty_assertions = "*"
tonic = "0.10"
prost = "0.12"
sha2 = "*"
surrealdb = { version = "1.0.0", features = ["kv-rocksdb"] }
serde = { version = "1.0.192", features = ["derive"] }
homedir = "0.2.1"
llm-chain = "0.12.0"
llm-chain-openai = "0.12.0"

[dev-dependencies]
tempfile = "*"

[build-dependencies]
tonic-build = "0.10"
